fix: Search modal overflow issue

--- a/guide/.vuepress/styles/search.scss
+++ b/guide/.vuepress/styles/search.scss
@@ -56,4 +56,10 @@ html.dark .DocSearch {
 			padding-bottom: 0;
 		}
 	}
+
+	.DocSearch-Modal {
+		.DocSearch-Dropdown {
+			overflow-y: auto;
+		}
+	}
 }
